# PICO_XLD_Server

src/client/: XLDMeasClient.m  XLDServerClient.m  main.py  pyproject.toml  testing.py  xld_client_testing.m  xld_server_client_MATLAB.m
src/client/XLDClient/: main.py  passkey_example.py
src/server/: database.py  database_sqlite.py  event_logger.py  main.py  measurements.py  pyproject.toml  tempcomm.py  temperature_sweep.py  tsweep_2023-10-06.py
src/server/XLDServer/: database_sqlite.py  event_logger.py  main.py  passkey_template.py  temperature_sweep.py
src/server/XLDServer/static/: styles.css
src/server/XLDServer/templates/: base.html  home.html  login.html  temperature_sweep.html
src/server/static/: styles.css
src/server/templates/: base.html  control.html  home.html  measurements.html  not_available.html  temperature_sweep.html
