# pyproject.toml

[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xld-server"
version = "0.2.0"
description = "Server package for XLD client management"
readme = "README.md"
authors = [{ name = "Elias Ankerhold", email = "elias.ankerhold@aalto.fi" }]
license = { file = "LICENSE.txt" }
classifiers = [
    "License :: OSI Approved :: GPL-3.0-only",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
]

dependencies = [
    'blueftc>=0.3.1',
    'Flask>=3.0.3',
    'Flask_Login>=0.6.2',
    'numpy>=2.1.3',
    'waitress>=2.1.2'
]

requires-python = ">=3.9"

[tool.setuptools]
packages = ['XLDServer']

[tool.setuptools.package-data]
XLDServer = ["static/*.css", "templates/*.html"]